cluster/apps/www/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shpaq-org
  namespace: apps
  labels:
    app.kubernetes.io/name: shpaq-org
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shpaq-org
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shpaq-org
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.4
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            name: nginx-conf
            subPath: index.html
          - mountPath: /usr/share/nginx/html/robots.txt
            name: nginx-conf
            subPath: robots.txt
        resources:
          requests:
            cpu: 24m
            memory: 24Mi
          limits:
            cpu: 64m
            memory: 128Mi
      volumes:
        - name: nginx-conf
          configMap:
            name: shpaq-org
      nodeSelector:
        kubernetes.io/role: worker
