cluster/apps/www/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shpaq-org
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
  labels:
    app.kubernetes.io/name: shpaq-org
spec:
  ingressClassName: nginx
  rules:
  - host: shpaq.org
    http:
      paths:
      - backend:
          service:
            name: shpaq-org
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: shpaq-org-tls
    hosts:
      - shpaq.org
